Update 'backend-tests-go-ntoafbiw' component image to: quay.io/rhtap_qe/backend-tests-go-ntoafbiw:09e23cd54530f1bbd3560a5bcd2fd2f3b42a1e40@sha256:e840b1839b017ae8884a766aec65ad7a62b30140bc0ea173637fd67207c703f3

--- a/components/backend-tests-go-ntoafbiw/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-ntoafbiw/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-ntoafbiw
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-ntoafbiw:09e23cd54530f1bbd3560a5bcd2fd2f3b42a1e40@sha256:e840b1839b017ae8884a766aec65ad7a62b30140bc0ea173637fd67207c703f3
+          name: container-image
